--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="gradient_blue_start">#4FC3F7</color>
     <color name="gradient_blue_end">#0D47A1</color>
     <color name="gray">#808080</color>
+    <color name="light_orange_card_background">#FFEADD</color>
+    <color name="light_blue_card_background">#E0F7FA</color>
 </resources>
