--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -112,16 +112,20 @@
             android:id="@+id/upload_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="한 번에 하나의 파일만 업로드할 수 있어요.\nMP3 또는 M4A 형식만 지원해요."
-            android:textSize="12sp"
-            android:textColor="#999999"
             android:gravity="center"
             android:lineSpacingExtra="5sp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:text=
+                "(주의사항)\n한 번에 하나의 파일만 업로드할 수 있습니다.\n
+                MP3, M4A, wav 형식만 지원합니다.\n
+                해당 ai는 금융 관련 대화만을 정확하게 인식합니다.\n
+                일상적인 대화에서는 정확도가 떨어집니다."
+            android:textColor="#999999"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_bias="0.55" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.606" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/uploadButton"
@@ -239,6 +243,7 @@
                         android:layout_marginTop="16dp"
                         android:textSize="22sp"
                         android:textStyle="bold"
+                        android:gravity="center"
                         tools:text="보이스피싱일 가능성이 높습니다."/>
 
                 </LinearLayout>
