09/08 Email and MinorFix

--- a/app/src/main/res/layout/activity_my_reports.xml
+++ b/app/src/main/res/layout/activity_my_reports.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F0F0F0"
     tools:context=".MyReportsActivity">
 
     <ImageView
@@ -13,16 +14,22 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:src="@drawable/ic_arrow_back"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.07"
+        app:layout_constraintHeight_percent="0.037"
+        />
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="내가 제보한 번호"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:fontFamily="@font/pretendard_gov_semibold"
+        android:textColor="#010101"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/btn_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
