--- a/app/src/main/res/layout/activity_my_posts.xml
+++ b/app/src/main/res/layout/activity_my_posts.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F0F0F0"
+
     tools:context=".MyPostsActivity">
 
     <androidx.appcompat.widget.Toolbar
