--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -47,7 +47,7 @@
     <ImageView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/ic_logout"
+        tools:src="@drawable/ic_logout"
         android:clickable="true"
         android:focusable="true"
         app:layout_constraintWidth_percent="0.07"
