--- a/app/src/main/res/layout/activity_write_post.xml
+++ b/app/src/main/res/layout/activity_write_post.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F0F0F0"
     android:fitsSystemWindows="true"
+    android:id="@+id/writepostactivity"
     tools:context=".WritePostActivity">
 
     <androidx.appcompat.widget.Toolbar
