--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.Mokathon" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Mokathon" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your light theme here. -->
             <item name="colorPrimary">@color/my_orange</item>
     </style>
