--- a/app/src/main/res/layout/activity_search_acc.xml
+++ b/app/src/main/res/layout/activity_search_acc.xml
@@ -275,4 +275,19 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="최근 3개월 간의 신고 이력을 조회해드려요."
+        android:fontFamily="@font/pretendard_gov_medium"
+        android:textSize="12sp"
+        android:textColor="#999999"
+        android:gravity="center"
+        android:lineSpacingExtra="3sp"
+        app:layout_constraintTop_toTopOf="@id/guideline_text_greeting_h_end"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@id/guideline_text_greeting_v"
+        app:layout_constraintEnd_toEndOf="@id/guideline_text_greeting_v_end"
+        app:layout_constraintVertical_bias="0.9" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
